# crafting-interpreters

./: .gitignore  Makefile  README.md  fibonacci.lox
clox/: .gitignore  Makefile
clox/src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
jlox/: README.md
jlox/lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxCallable.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Return.java  RuntimeError.java  Scanner.java  Stmt.java  Token.java  TokenType.java
jlox/tool/: GenerateAst.java
lox_scripts/: bacon.lox  cake.lox  fibonacci.lox
pylox/: README.md  pyproject.toml  requirements-dev.txt
pylox/pylox/: __init__.py  error_handler.py  expr.py  expr_template.py  generate_ast.py  interpreter.py  lox_runtime_error.py  lox_token.py  main.py  parser.py  scanner.py  stmt.py  token.py  token_type.py
pylox/test/: scanner_test.py  test_parser.py  test_scanner.py
