[project]
name = "pylox"
version = "0.1.0"
description = "A Python implementation of the Lox interpreter (Crafting Interpreters)"
authors = [{ name = "Reiden", email = "reidenong02@gmail.com" }]
requires-python = ">=3.12"

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_configs = true
show_error_codes = true
pretty = true
exclude = ["tests/helpers/"]
mypy_path = "pylox"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["test"]
